manifests/virtual-service-kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
spec:
  hosts:
    - "*"
  gateways:
    - k8s-demo-gateway
  http:
    - match:
        - uri:
            prefix: /kiali/
      route:
        - destination:
            host: kiali.istio-system
            port:
              number: 9090
