manifests/virtual-service-prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
    - "*"
  gateways:
    - k8s-demo-gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
